[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["yuliamarkiv <yulia.markiv.27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
requests = "^2.26.0"
SQLAlchemy = "^1.4.26"
mysqlclient = "^2.0.3"
alembic = "^1.7.4"
Flask-Bcrypt = "^0.7.1"
Flask-HTTPAuth = "^4.5.0"
marshmallow = "^3.14.1"
bcrypt = "^3.2.0"
mysql = "^0.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
